# pipecat-avaturn-live-demo

./: .env.example  .gitignore  Dockerfile  Dockerfile.server  README.md  bot.py  compose.yml  pcc-deploy.toml  pyproject.toml  server.py
.github/workflows/: deploy.yml
frontend/: README.md  index.html
pipecat_avaturn/: __init__.py  agent.py  broker.py  frames.py  pipecat_cloud.py  segment_processor.py  serializer.py  settings.py  transport.py
scripts/: start-session.sh
tests/: test_agent.py  test_segment_processor.py  test_serializer.py
