[project]
name = "pipecat-avaturn-live-demo"
version = "0.1.0"
description = "Open-source demo: drive an Avaturn Live avatar with a Pipecat Cloud agent."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pipecat-ai[openai,silero,websocket]>=1.2.1",
    "pipecatcloud>=0.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipecat_avaturn"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]

# --- Tooling --------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
src = ["pipecat_avaturn", "tests"]

[tool.ruff.lint]
extend-select = ["I", "FAST"]

[tool.ruff.format]

[tool.basedpyright]
include = ["pipecat_avaturn", "server.py", "bot.py", "tests"]
pythonVersion = "3.12"

reportMissingImports = true
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = true
reportAttributeAccessIssue = true
strictDictionaryInference = true
strictListInference = true
reportUnnecessaryIsInstance = true
reportMatchNotExhaustive = true
strictSetInference = true
reportDeprecated = true
reportMissingTypeStubs = false
reportUnreachable = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--strict-markers --import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

filterwarnings = [
    # Pipecat's FrameProcessor schedules an internal handler task in __init__;
    # in unit tests we never run the full pipeline, so it's GC'd unfinished.
    "ignore:coroutine 'FrameProcessor.__process_frame_task_handler' was never awaited:RuntimeWarning",
]
